@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST aegis-4.19.tar.gz 3516926 RMD160 ef49d3b96ed4cd60345763ba831c5ebc085fe883 SHA1 a095677d82bdbf9b8d180e6468fd227567b283df SHA256 21efa038dffc344ea023d05d4871ce2340d2a8d9c47c645d7b860da74d13c513
 DIST aegis-4.24.tar.gz 5063689 RMD160 a868225fc151d8b8909382e7d72b22ea3048fbcd SHA1 83dc200af71807ad87802d87e043c3b5a81ab18d SHA256 54b23a7c66f4331465ab512d7686e2a526a1d8f2ffae770225acbaacb43648a3
 EBUILD aegis-4.19.ebuild 1628 RMD160 3bc8d1649be377fdea51fb6da422080cc196e49a SHA1 a18e35fcfcc76c99872beeefc9b5319dd89691f1 SHA256 4a97a4c8922c23a4d7517376a637c2b83f65a609c1f823f40af13746e5e3a158
-EBUILD aegis-4.24.ebuild 1753 RMD160 8fd11f4e5bbc49a71e919c94adb56c7c0eaa8df7 SHA1 cb83f9772e7835f642d30c7cb999a39126dff51c SHA256 b84cbdb4c9a675a6a49f6934384706142048ad24de18b78da4a440f7c276e7f8
-MISC ChangeLog 3309 RMD160 eb4c528da83a7a324dcf83e284cd1458479c69a9 SHA1 207649486d1e2844cb97eac55dca572500537b67 SHA256 a6ee908c4095253894c9fe697a10bf290a9e26b994372c46006e82c47f2966db
+EBUILD aegis-4.24.ebuild 1752 RMD160 aaecb05273d8a58fdba33b468ab164999763e3a9 SHA1 ea147b73ae0898f7e7b4e323011467225aff5137 SHA256 993ea6b4b823c7a7abd784995e4605d4cb27c3cd866398ff91d3a0741f24211d
+MISC ChangeLog 3426 RMD160 0471e6f3baf729d4ca488e635220470bf709a444 SHA1 eb94d0d21107cf56ba42e9ca553ff5aca8aff587 SHA256 8ebd13d0b0b151c2df8f9166beb4c4eba64259cd4fef0f47722b2494e152b37f
 MISC metadata.xml 608 RMD160 e2691b938ba3ab9c283277e8e3764e34bf3dbfd1 SHA1 4ac32d08dc12726853b8dc520e6e300f0ff32dd5 SHA256 35ee3c4d70fef6007742d5d6ad156544dafda1332334d165f190f4923bab6e90
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAksqoqcACgkQAiZjviIA2Xgc1wCfeT81TG3WxreHrbC6gNL+Vg0s
+fIMAoNB53ToiY50b5jV6Pr2SBfSKDZS5
+=9QeK
+-----END PGP SIGNATURE-----
