@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/aegis/aegis-4.24.ebuild,v 1.1 2008/06/30 01:43:53 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/aegis/aegis-4.24.ebuild,v 1.2 2009/12/17 21:29:01 flameeyes Exp $
 
 inherit autotools
 
@@ -45,12 +45,12 @@ src_compile() {
 	# Second ebuild causes redefined/undefined function errors
 	#make clean
 
-	# not emake safe, I think
-	make || die
+	# bug #297334
+	emake -j1 || die
 }
 
 src_install () {
-	make RPM_BUILD_ROOT="${D}" install || die
+	emake -j1 RPM_BUILD_ROOT="${D}" install || die
 
 	# OK so ${D}/var/lib/aegis gets UID=3, but for some
 	# reason so do the files under /usr/share, even though
